--- a/package.json
+++ b/package.json
@@ -4,33 +4,32 @@
   "description": "Fork of minimongo designed for caching",
   "main": "index.js",
   "scripts": {
-    "test": "testem ci -s phantomjs",
-    "prepublish": "gulp"
+    "test": "testem ci -s phantomjs"
   },
   "license": "LGPLv3",
   "homepage": "https://github.com/petehunt/minimongo-cache",
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "bowser": "^0.7.1",
-    "browserify": "^3.29.1",
+    "browserify": "^16.5.1",
     "chai": "~1.9.0",
     "coffee-script": "~1.6.3",
     "coffeeify": "~0.6.0",
-    "glob": "^3.2.9",
-    "gulp": "^3.8.11",
+    "glob": "^7.1.6",
+    "gulp": "^4.0.2",
     "gulp-babel": "^6.1.1",
     "gulp-coffee": "^1.4.2",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^0.3.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^2.2.14",
     "sinon": "~1.8.2",
-    "testem": "~0.6.7",
-    "vinyl-buffer": "0.0.0",
+    "testem": "^3.1.0",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^0.1.1"
   },
   "dependencies": {
     "eventemitter3": "^1.1.0",
     "invariant": "^2.1.1",
-    "lodash": "~2.4.1"
+    "lodash": "^4.17.15"
   }
 }
