--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minimongo-cache",
-  "version": "0.0.49",
+  "version": "1.0.0",
   "description": "Fork of minimongo designed for caching",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,10 @@
     "prepublish": "gulp"
   },
   "license": "LGPLv3",
-  "homepage": "https://github.com/petehunt/minimongo-cache",
+  "homepage": "https://github.com/bradnorman5490/minimongo-cache",
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "babel-preset-es2015": "^6.3.13",
     "bowser": "^0.7.1",
     "browserify": "^16.5.1",
@@ -18,15 +20,15 @@
     "coffeeify": "~0.6.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
-    "gulp-babel": "^6.1.1",
+    "gulp-babel": "^8.0.0",
     "gulp-coffee": "^1.4.2",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^2.2.14",
+    "gulp-util": "^3.0.8",
     "sinon": "~1.8.2",
     "testem": "^3.1.0",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^0.1.1"
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "eventemitter3": "^1.1.0",
