--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "testem ci -s phantomjs",
-    "prepublish": "gulp"
+    "postinstall": "gulp"
   },
   "license": "LGPLv3",
   "homepage": "https://github.com/bradnorman5490/minimongo-cache",
